--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -15,7 +15,7 @@
             <div class="col-md-9">
                 <div class="card-body">
                     <h2 class="card-title">{{item.title}}</h2>
-                    <p class="card-text">{{item.description}}</p>
+                    <p class="card-text">{{item.description | summary: 20}}</p>
                     <p class="card-text">{{item.datePublish | date: 'dd/MM/y'}}</p>
                     <button class="btn btn-sm btn-outline-primary">Details</button>
                 </div>
@@ -34,7 +34,7 @@
                 <img src="assets/img/{{item.imgUrl}}" alt="" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">{{item.title}}</h5>
-                    <p class="card-text">{{item.description}}</p>
+                    <p class="card-text">{{item.description | summary: 30}}</p>
                 </div>
             </div>
         </div>
