--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -2,12 +2,16 @@
     <ng-template [ngTemplateOutlet]="movieList2" [ngTemplateOutletContext]="{ pMovies : popularMovies }"></ng-template>
     <h1> {{title}}</h1>
     <div class="alert alert-warning" *ngIf="movies.length>0"> {{movies.length}} adet film bulundu.</div>
+    <div class="mb-3">
+        <input [(ngModel)]="filterText" type="text" class="form-control" placeholder="Search">
+        <small class="text-muted" *ngIf="filterText">Aradığınız Kelime: {{filterText}}</small>
+    </div>
     <ng-template [ngTemplateOutlet]="movieList1"></ng-template>
 
 </div>
 
 <ng-template #movieList1>
-    <div class="card mb-3" *ngFor="let item of movies">
+    <div class="card mb-3" *ngFor="let item of movies | movieFilter: filterText">
         <div class="row">
             <div class="col-md-3">
                 <img src="assets/img/{{item.imgUrl}}" alt="" class="img-fluid rounded-start">
